--- a/DGN/Views/Users/Profile.cshtml
+++ b/DGN/Views/Users/Profile.cshtml
@@ -8,55 +8,33 @@
 <div class="container">
     <div class="main-body">
         <form id="form" class="row gutters-sm" method="post" asp-action="Profile" enctype="multipart/form-data">
-            <input type="hidden" asp-for="Id" id="ProfileId"/>
+            <input type="hidden" asp-for="Id" id="ProfileId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="col-md-4 mb-3">
                 <div class="card">
                     <div class="card-body">
                         <div class="d-flex flex-column align-items-center text-center">
                             <img src="@Model.ImageLocation" alt="Admin" class="rounded-circle" width="150" height="150">
-                            @if (ViewData.ModelState.IsValid && ViewData["Error"] == null)
-                            {
-                                <div class="mt-3" id="EditAbout">
-                                    <h4>@Model.Username</h4>
-                                    <p class="text-secondary mb-1">@Model.About</p>
-                                </div>
-                            }
-                            else
-                            {
-                                <div class="mt-3">
-                                    <h4>@Model.Username</h4>
-                                    <input class="form-control" asp-for="About">
-                                    <span asp-validation-for="About" class="text-danger" value="@Model.About"></span>
-                                </div>
-                            }
+                            <div class="mt-3" id="EditAbout">
+                                <h4>@Model.Username</h4>
+                                <p class="text-secondary mb-1">@Model.About</p>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="card mt-3">
                     <ul class="list-group list-group-flush">
-                        @if (Model.ArticleLikes.Count > 0)
-                        {
-                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                <h6 class="mb-0"><strong>@Html.DisplayNameFor(model => model.ArticleLikes) by @Model.Username</strong></h6>
-                            </li>
-                            @foreach (Article article in Model.ArticleLikes)
-                            {
-                                <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                    <row>
-                                        <img src="@article.ImageLocation" alt="Admin" width="50" height="50">
-                                        <a class="mb-0" asp-controller="Articles" asp-action="Details" asp-route-id="@article.Id"> @article.Title </a>
-                                    </row>
-                                </li>
-
-                            }
-                        }
-                        else
-                        {
-                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                <h6 class="mb-0"><strong>There are no @Html.DisplayNameFor(model => model.ArticleLikes) by @Model.Username</strong></h6>
-                            </li>
-                        }
+                        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                            <h6 class="mb-0"><strong>@Html.DisplayNameFor(model => model.ArticleLikes) by @Model.Username</strong></h6>
+                        </li>
+                        <div id="Liked">
+                        </div>
+                        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                            <div class="col-sm-12 text-secondary">
+                                <button type="button" class="btn" id="NextPageLiked">Next Page</button>
+                                <button type="button" class="btn" id="PrevPageLiked">Prev Page</button>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -120,27 +98,17 @@
                 </div>
                 <div class="card mb-3">
                     <ul class="list-group list-group-flush">
-                        @if (Model.Articles.Count > 0)
-                        {
-                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                <h6 class="mb-0"><strong>@Html.DisplayNameFor(model => model.Articles) by @Model.Username</strong></h6>
-                            </li>
-                            @foreach (Article article in Model.Articles)
-                            {
-                                <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                    <row>
-                                        <img src="@article.ImageLocation" alt="Admin" width="50" height="50">
-                                        <a class="mb-0" asp-controller="Articles" asp-action="Details" asp-route-id="@article.Id"> @article.Title </a>
-                                    </row>
-                                </li>
-                            }
-                        }
-                        else
-                        {
-                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                <h6 class="mb-0"><strong>There are no @Html.DisplayNameFor(model => model.Articles) by @Model.Username</strong></h6>
-                            </li>
-                        }
+                        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                            <h6 class="mb-0"><strong>@Html.DisplayNameFor(model => model.Articles) by @Model.Username</strong></h6>
+                        </li>
+                        <div id="Authored">
+                        </div>
+                        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                            <div class="col-sm-12 text-secondary">
+                                <button type="button" class="btn" id="NextPageAuthored">Next Page</button>
+                                <button type="button" class="btn" id="PrevPageAuthored">Prev Page</button>
+                            </div>
+                        </li>
                     </ul>
                 </div>
                 <div class="card mb-3">
@@ -148,13 +116,13 @@
                         <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                             <h6 class="mb-0"><strong>The articles @Model.Username commented on </strong></h6>
                         </li>
-                        <div id="MostCommentedArticlePage">
+                        <div id="MostCommented">
                         </div>
                         <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                             <div class="col-sm-12 text-secondary">
-                                <button class="btn" id="NextPage">Next Page</button>
-                                <button class="btn" id="PrevPage">Prev Page</button>
-                            </div>   
+                                <button type="button" class="btn" id="NextPageMostCommented">Next Page</button>
+                                <button type="button" class="btn" id="PrevPageMostCommented">Prev Page</button>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -190,7 +158,7 @@
                             <h6 class="mb-0">@Html.DisplayNameFor(model => model.Firstname)</h6>
                         </div>
                         <div class="col-sm-9 text-secondary">
-                            <input class="form-control" asp-for="Firstname" id="firstName" >
+                            <input class="form-control" asp-for="Firstname" id="firstName">
                             <span class="text-danger" id="firstNameMessage"></span>
                         </div>
                     </div>
@@ -250,6 +218,27 @@
                 </div>
             </div>
         </div>
+    </script>
+
+    <script id="NoMoreArticleTemplate" type="text/html">
+        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+            <h6 class="mb-0"><strong>There are no More Articles</strong></h6>
+        </li>
+    </script>
+
+    <script id="NoArticleTemplate" type="text/html">
+        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+            <h6 class="mb-0"><strong>There are no Articles</strong></h6>
+        </li>
+    </script>
+
+    <script id="ArticleTemplate" type="text/html">
+        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+            <row>
+                <img src="{imageLocation}" alt="Admin" width="50" height="50">
+                <a class="mb-0" asp-controller="Articles" asp-action="Details" asp-route-id="{Id}"> {title} </a>
+            </row>
+        </li>
     </script>
 
     <script src="~/js/Profile.js"></script>
